# inspired by https://hynek.me/articles/sharing-your-labor-of-love-pypi-quick-and-dirty/

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bletl"
version = "1.7.0"
description = "Package for parsing and transforming BioLector raw data."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Michael Osthege", email = "m.osthege@fz-juelich.de"},
]
classifiers = [
    "Programming Language :: Python",
            "Operating System :: OS Independent",
            "Programming Language :: Python :: 3.11",
            "Programming Language :: Python :: 3.12",
            "Programming Language :: Python :: 3.13",
            "Programming Language :: Python :: 3.14",
            "Intended Audience :: Science/Research",
]
dependencies = [
    "csaps>=0.11",
    "joblib",
    "numpy",
    "pandas",
    "rich",
    "scipy",
    "tsfresh",
    "setuptools",
]

[project.urls]
Homepage = "https://github.com/jubiotech/bletl"
Documentation = "https://bletl.readthedocs.io/en/latest/"
Download = "https://pypi.org/project/bletl/"

[tool.setuptools]
package-dir = {"bletl" = "bletl"}

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
